Implement initial version of working userlist (backend + frontend)