@@ -58,10 +58,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+
+        // Frontend Urls
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000", // React/Vite
+                "http://localhost:5500", // Live Server
+                "http://127.0.0.1:5500", // Live Server (alternative)
+                "http://localhost:63342", // IntelliJ
+                "http://localhost:63343" // IntelliJ (alternative)
+        ));
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L); // Cache CORS-Preflight für 1 Stunde
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
